--- a/wp-plugin/ballfrog/templates/results.html
+++ b/wp-plugin/ballfrog/templates/results.html
@@ -1,4 +1,4 @@
-<table cellpadding="0" cellspacing="1" border="0">
+<table cellpadding="0" cellspacing="1" border="0" class="ballfrog-grid">
 	<thead>
 		<tr>
 			<th>Date/Time</th>
