Adding refresh feature

--- a/wp-plugin/ballfrog/templates/scoreboard.html
+++ b/wp-plugin/ballfrog/templates/scoreboard.html
@@ -1,3 +1,6 @@
+
+{{refresh_button}}
+
 <table cellpadding="0" cellspacing="1" border="0" class="ballfrog-grid ballfrog-scoreboard">
 	
 	<!-- just the first game row that we get back -->
@@ -37,7 +40,7 @@
 	<h5>Game Activity</h5>
 	{{rows.0}}
 		{{activity}}
-			<div class="activity-item">
+			<div class="bf-activity-item">
 				{{if comments}}
 					<q>{{comments}}</q>
 				{{/if}}
