Adding padding to grid

--- a/wp-plugin/src/scss/ballfrog-api.scss
+++ b/wp-plugin/src/scss/ballfrog-api.scss
@@ -13,11 +13,13 @@
 		th{
 			background-color: #efefef;
 			font-size: .9em;
+			padding: .5em;
 		}
 
 		td{
 			color: #555;
 			font-size: .85em;
+			padding: .5em;
 		}
 
 		.txt-center{
