--- a/wp-plugin/ballfrog/templates/scoreboard.html
+++ b/wp-plugin/ballfrog/templates/scoreboard.html
@@ -1,12 +1,9 @@
-
 {{if rows}}
-
 	{{refresh_button}}
 
 	<table cellpadding="0" cellspacing="1" border="0" class="ballfrog-grid ballfrog-scoreboard">
 		
 		<!-- just the first game row that we get back -->
-
 		{{rows.0}}
 
 			<!-- loop through the scoreboard data three times - - one for each row -->
@@ -14,23 +11,35 @@
 			<thead>
 				<tr>
 					<!-- this time, just output the first element in each array, which will be for the col heading -->
-					{{scoreboard}}
-						<th class="{{if #|first}}first{{else}}txt-center{{/if}}">{{0}}</th>
-					{{/scoreboard}}
+					{{scoreboard.data}}
+						<th class="{{if #|first}}first{{else}}txt-center{{/if}}">{{name}}</th>
+					{{/scoreboard.data}}
+
+					<th class="txt-center">T</th>
 				</tr>
 			</thead>
 
 			<!-- now output array elements indexed at 1 and 2, for the team scores rows -->
 			<tbody>
 				<tr>
-					{{scoreboard}}
-						<td class="{{if #|first}}first{{else}}txt-center{{/if}}">{{if 1|falsy}}-{{else}}{{1}}{{/if}}</td>
-					{{/scoreboard}}
+					{{scoreboard.data}}
+						<td class="{{if #|first}}first{{else}}txt-center{{/if}}">{{if score|falsy}}0{{else}}{{score}}{{/if}}</td>
+						{{if #|last}}
+						<td class="txt-center">
+							{{if !has_score}}-{{else}}{{score_sum}}{{/if}}
+						</td>
+						{{/if}}
+					{{/scoreboard.data}}
 				</tr>
 				<tr>
-					{{scoreboard}}
-						<td class="{{if #|first}}first{{else}}txt-center{{/if}}">{{if 2|falsy}}-{{else}}{{2}}{{/if}}</td>
-					{{/scoreboard}}
+					{{scoreboard.data}}
+						<td class="{{if #|first}}first{{else}}txt-center{{/if}}">{{if opponent_score|falsy}}0{{else}}{{opponent_score}}{{/if}}</td>
+						{{if #|last}}
+						<td class="txt-center">
+							{{if !has_score}}0{{else}}{{opponent_score_sum}}{{/if}}
+						</td>
+						{{/if}}
+					{{/scoreboard.data}}
 				</tr>
 			</tbody>
 	
@@ -41,16 +50,14 @@
 	{{if rows.0.activity}}
 		<div class="ballfrog-activity">
 			<h5>Game Activity</h5>
-			{{rows.0}}
-				{{activity}}
-					<div class="bf-activity-item">
-						{{if comments}}
-							<q>{{comments}}</q>
-						{{/if}}
-						<small>{{datetime|date>ddd, MMM D}} {{summary}}</small>
-					</div>
-				{{/activity}}
-			{{/rows.0}}
+			{{rows.0.activity.data}}
+				<div class="bf-activity-item">
+					{{if comments}}
+						<q>{{comments}}</q>
+					{{/if}}
+					<small>{{date|date>ddd, MMM D}} {{message}}</small>
+				</div>
+			{{/rows.0.activity.data}}
 		</div>
 	{{/if}}
 
