--- a/wp-plugin/ballfrog/templates/results-custom.html
+++ b/wp-plugin/ballfrog/templates/results-custom.html
@@ -1,39 +1,84 @@
-<table cellpadding="0" cellspacing="1" border="0" class="ballfrog-grid">
-	<thead>
-		<tr>
-			<th>Date/Time</th>
-			<th>Team</th>
-			<th>Opponent</th>
-			<th>Location</th>
-			<th>Status</th>
-			<th>Score</th>
-			<th>Opponent Score</th>
-			<th>Result</th>
-		</tr>
-	</thead>
-	<tbody>
-		{{if rows}}
-			{{rows}}
-				<tr>
-					<td>{{starts_at|date>ddd, MMM D}}</td>
-					<td>{{team.data.org_name}}</td>
-					<td>{{opponent}}</td>
-					<td>{{location}}</td>
-					<td>{{if status}}{{status}}{{/if}}</td>
-					<td>{{if score}}{{score}}{{/if}}</td>
-					<td>{{if opponent_score}}{{opponent_score}}{{/if}}</td>
-					<td>
-						{{if scores.full}}{{scores.full}}{{/if}}
-						{{if scores.result}} ({{scores.result}}){{/if}}
-					</td>
-				</tr>
-			{{/rows}}
-		{{else}}
-			<tr>
-				<td colspan="5">
-					Sorry, no games to be shown.
-				</td>
-			</tr>
+<div class="upcoming-game{{if rows.0.has_started}} rival{{/if}}">
+	<div class="game-body">
+		{{if rows.0.starts_at}}
+		<header class="game-time">
+			<p class="time">{{row.0.starts_at|date>ddd, MMM D YYYY}}</p>
+		</header>
 		{{/if}}
-	</tbody>
-</table>
+		<div class="game-matchup">
+			<div {{if rows.0.team.data.color}} style="background-color:{{rows.0.team.data.color}}" {{/if}} class="team">
+			{{if rows.0.location}}
+				<p class="location">{{rows.0.location|capcase}}</p>
+			{{/if}}
+			{{if rows.0.matchup.data.full_name}}
+				<h4>{{rows.0.matchup.data.full_name}}</h4>
+			{{else}} 
+				{{if rows.0.team.data.org_name}}
+				<h4>{{rows.0.team.data.org_name}}</h4>
+				{{/if}}
+			{{/if}}
+			</div>
+			<p class="versus">VS</p>
+			<div {{if rows.0.opponent_color}} style="background-color:{{rows.0.opponent_color}}" {{/if}} class="team">
+			{{if rows.0.starts_at}}
+				{{if rows.0.location|equals>home}}
+					<p class="location">Away</p>
+				{{else}}
+					<p class="location">Home</p>
+				{{/if}}
+			{{/if}}
+				<h4>{{rows.0.opponent}}</h4>
+			</div>
+		</div>
+		{{if rows.0.has_started }}
+			<div class="game-score">
+				<h3 class="full-score">
+					{{if rows.0.score|falsy}}0{{else}}{{rows.0.score}}{{/if}}-{{if rows.0.opponent_score|falsy}}0{{else}}{{rows.0.opponent_score}}{{/if}}
+				</h3>
+				{{if rows.0.status}}<p class="status">{{rows.0.status}}</p>{{/if}}
+			</div>
+		{{/if}}
+	</div>
+</div>
+<div class="upcoming-game{{if rows.0.has_started}} rival{{/if}}">
+	<div class="game-body">
+		{{if rows.0.starts_at}}
+		<header class="game-time">
+			<p class="time">{{row.0.starts_at|date>ddd, MMM D YYYY}}</p>
+		</header>
+		{{/if}}
+		<div class="game-matchup">
+			<div {{if rows.0.team.data.color}} style="background-color:{{rows.0.team.data.color}}" {{/if}} class="team">
+			{{if rows.0.location}}
+				<p class="location">{{rows.0.location|capcase}}</p>
+			{{/if}}
+			{{if rows.0.matchup.data.full_name}}
+				<h4>{{rows.0.matchup.data.full_name}}</h4>
+			{{else}} 
+				{{if rows.0.team.data.org_name}}
+				<h4>{{rows.0.team.data.org_name}}</h4>
+				{{/if}}
+			{{/if}}
+			</div>
+			<p class="versus">VS</p>
+			<div {{if rows.0.opponent_color}} style="background-color:{{rows.0.opponent_color}}" {{/if}} class="team">
+			{{if rows.0.starts_at}}
+				{{if rows.0.location|equals>home}}
+					<p class="location">Away</p>
+				{{else}}
+					<p class="location">Home</p>
+				{{/if}}
+			{{/if}}
+				<h4>{{rows.0.opponent}}</h4>
+			</div>
+		</div>
+		{{if rows.0.has_started }}
+			<div class="game-score">
+				<h3 class="full-score">
+					{{if rows.0.score|falsy}}0{{else}}{{rows.0.score}}{{/if}}-{{if rows.0.opponent_score|falsy}}0{{else}}{{rows.0.opponent_score}}{{/if}}
+				</h3>
+				{{if rows.0.status}}<p class="status">{{rows.0.status}}</p>{{/if}}
+			</div>
+		{{/if}}
+	</div>
+</div>
